@@ -2,6 +2,7 @@
 * allow multiple values in 'storetype'
 * display licensing information in GUI
 * XZ unpacking cleanups
+* condense filenames in generateuniquehtml.py for easier display in GUI
 
 2012-11-10
 * stop processing XZ files as soon as all possible XZ files have been extracted.
